istiofiles/destination-rule-tls.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "rest-app-a"
  namespace: "tutorial"
spec:
  host: "rest-app-a"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
