istiofiles/disable-mtls.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "tutorial"
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: DISABLE
