istiofiles/ingress-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tutorial-rest-app-a-vs
spec:
  hosts:
    - "rest-app-a.example.com"
  gateways:
    - tutorial-rest-a-gateway
  http:
    - match:
        - uri:
            prefix: /citiesCount
        - uri:
            prefix: /ping
      route:
        - destination:
            port:
              number: 80
            host: rest-app-a
